1999-10-14  Adam Fedor  <fedor@gnu.org>

	* target.make (AUXILIARY_CPPFLAGS): Change from ADDITIONAL... so
	it doesn't get reset by other Makefiles

1999-10-11 Adam Fedor <fedor@gnu.org>

	* Allow for separate System root directory and other changes
	suggested by Dennis Leeuw <adl@casema.net>.
	* configure.in: Add test for separate system root directory.
	* GNUmakefile.in (GNUSTEP_PREFIX): Absolute GNUstep root. Move
	man and info dirs to separate Documentation dir.
	* GNUstep.csh.in: (GNUSTEP_ROOT): Absolute root. Define Local dir
	interms of this. Add Network dir.
	* GNUstep.sh.in: Likewise.
	* common.make: Move documentation dirs. Add Network dir info.
	Look for gui Headers in gnustep/AppKit. 
	* rules.make: Add Network dir info.

Tue Sep 28 19:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* brain.make: Define GS_WITH_GC and link with gc version of objc
	runtime if 'gc=yes' on command line.

Fri Sep 24 19:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* GNUstep.csh.in: Fix so that paths are set up correctly again.
	* GNUstep.sh.in: Fix so that paths are set up correctly again and
	add checks to try to avoid duplicating information in paths.
	* ld_lib_path.sh: Add checks to try to avoid duplication in path.

Mon Sep 20  9:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Patch from cls@seawood.org -
	* GNUstep.sh.in: avoid multiple GNUstep entries in path
	* GNUstep.csh.in: avoid multiple GNUstep entries in path

Sun Sep 19  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* bundle.make (internal-bundle-distclean): Added
	$(BUNDLE_DIR_NAME) so that the bundle is removed on distclean.

Fri Sep 17  1999  Nicola Pero  <n.pero@mi.flashnet.it>

	* rules.make (distclean): added test, so that distclean invokes
	clean only in the top dir.  This avoids having 'make clean'
	executed uselessly a lot of times in subdirs.

1999-09-14  Adam Fedor  <fedor@gnu.org>

	* common.make, config.make.in: Remove -o from LDFLAGS.