@@ -3,6 +3,10 @@
 	* target.make (AUXILIARY_CPPFLAGS): Change from ADDITIONAL... so
 	it doesn't get reset by other Makefiles
 
+1999-10-11  Lyndon Tremblay <humasect@coolmail.com>
+
+	* debugapp: Added support for core files, if found
+
 1999-10-11 Adam Fedor <fedor@gnu.org>
 
 	* Allow for separate System root directory and other changes
